# ML_DL_conquest

./: .gitignore  Dataset-import-export.ipynb  README.md  admission_perdication.ipynb  cust_churn_prediction.ipynb  lab-7.ipynb  mnist_classification.ipynb  packages.txt  pyproject.toml  simple-linear-regession.ipynb  tensor-demo.ipynb  working-with-csv.ipynb
pytorch/: pytorch101.ipynb  pytorch_mnist.ipynb  pytorch_multi_classification.ipynb  pytorch_nn_classification.ipynb
pytorch/models/: 01_pytorch_linear_regression_model.pth
