[project]
name = "ml-dl-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pathlib>=1.0.1",
    "pip>=25.2",
    "scikit-learn>=1.7.2",
    "tensorflow>=2.20.0",
    "torch>=2.4.1",
    "torch-directml>=0.2.5.dev240914",
    "torchvision>=0.19.1",
    "tqdm>=4.67.1",
]
